# football-analytics

./: .directory  .gitignore  .renvignore  Competitiveness.R  Germanypolygon21.dbf  Pipfile  Quality.R  README.md  animation.R  big3.R  bundesliga.R  bvb_decline.R  facets.R  keylabeler.yml  pyproject.toml  refs.R  rich_list.ods  season.csv  spend.csv  twitter.R  ucl.csv  ucl_competitiveness.R
BuLi Map/: BuLi Map.odt  map.R
Collapse/: bvb_decline.R
Ideas/: League finances.odt
League Comparison/: Competitiveness.R  Quality.R  big3.R  germany.R  set_pieces.R
League-Comparison/: Quality.R  asd.csv  league_quality.R  set_pieces.R
Preview/: Dortmund Preview.odt
R/: plot_theme.R
Referee-Analysis/: cards.csv
age/: age_dist.R
age-distributions/: age_dist.R
age-distributions/data/: age.csv
archive/league-comparison/: animation.R  germany.R  ucl_competitiveness.R
archive/worst-teams/: worst_teams.R
bvb-xg/: buli_xg.csv  buli_xg_diff.R  shots.R
bvb/desirability/: desirability.qmd
bvb/favre/: xg.ipynb
bvb/goalkeeper-analysis/: replacements.R
epl/: explaining_saints.R  results.csv  saints_performance.R  xg_trends.R
ftw/: Ending the League.odt  Future Stats.odt  Goals Added Model.odt  goals-added.ipynb  squad-stats.csv  worst_teams.R
goalkeeper-analysis/: README.md  big_five.csv  gk_analysis.R  replacements_tbl.R
league_comparison/: bundesliga.R
populism/: pitch.odt  populism.odt
referee_analysis/: refs.R  true_totals.csv
saints/: explaining_saints.R  saints_performance.R
sancho/: creation.csv  sancho.R  sancho.csv
shooting/: shots.csv
(+61 files in other folders)
