[project]
name = "football-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bleach>=6.2.0",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.7",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas-profiling>=3.2.0",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
]
